force-app/main/default/objects/Avion__c/Avion__c.object-meta.xml
<CustomObject>
    <description>es un artefacto de transporte de pasajeros o carga. Si el avión es de tipo carga no se debe admitir número de pasajeros</description>
    <label>Avion</label>
    <nameField>
        <displayFormat>AV{00000}</displayFormat>
        <label>Numero de Avion</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aviones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>