force-app/main/default/objects/Avion__c/fields/Activo__c.field-meta.xml
<CustomField>
    <fullName>Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valida si el avion se encuentra habilitado para prestar servicio</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>