force-app/main/default/objects/Avion__c/fields/Capacidad_de_carga__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_de_carga__c</fullName>
    <description>Capacidad de carga con la que cuenta el avion (En kilogramos)</description>
    <label>Capacidad de carga</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>