force-app/main/default/objects/Avion__c/fields/Numero_de_pasajeros_clase_negocios__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_pasajeros_clase_negocios__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Numero de Asientos para la clase negocios</description>
    <label>Numero de pasajeros clase negocios</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>