force-app/main/default/objects/Avion__c/fields/Numero_de_pasajeros_clase_turista__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_pasajeros_clase_turista__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Numero de asientos para la clase turista</description>
    <label>Numero de pasajeros clase turista</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>