force-app/main/default/objects/Avion__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Tipo de transporte al que pertenece el avion</description>
    <label>Tipo</label>
    <type>TextArea</type>
</CustomField>