force-app/main/default/objects/Avion__c/fields/Viajes_Internacionales__c.field-meta.xml
<CustomField>
    <fullName>Viajes_Internacionales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valida si la aeronave tiene permitidos los vuelos internacionales</description>
    <label>¿Viajes Internacionales?</label>
    <type>Checkbox</type>
</CustomField>