force-app/main/default/objects/Avion__c/fields/Viajes_Nacionales__c.field-meta.xml
<CustomField>
    <fullName>Viajes_Nacionales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valida si la aeronave tiene permitido realizar vuelos nacionales.</description>
    <label>¿Viajes Nacionales?</label>
    <type>Checkbox</type>
</CustomField>