force-app/main/default/objects/Avion__c/validationRules/Solo_carga_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Solo_carga_check</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Solo_Carga__c ,  OR(  NOT( ISBLANK( Numero_de_pasajeros_clase_negocios__c ) )  , NOT( ISBLANK( Numero_de_pasajeros_clase_turista__c ) ) ) , False)</errorConditionFormula>
    <errorMessage>El avion es de solo carga asi que no debe de contener pasajeros</errorMessage>
</ValidationRule>